--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -7,6 +7,7 @@
   <div class="nav-item">
     {{#if adminRole}}
       <a class="nav-link" href="/">agregar mas productos </a>
+      <a class="nav-link" href="/api/users">panel de administrador</a>
     {{/if}}
 
   </div>
