agrego el campo last_conection en UserDTO / remplazo user.name por user.fullname traido desde req.session.user

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -2,7 +2,7 @@
   class="navbar navbar-expand-lg navbar-light bg-dark"
   style="gap: 2rem;color:white;"
 >
-  <h2 class="nav-item blue">Bienvenido {{user.first_name}} </h2><br />
+  <h2 class="nav-item blue">Bienvenido {{user.fullname}} </h2><br />
   <h6 class="nav-item blue">has accedido como {{user.role}}</h6>
   <div class="nav-item">
     {{#if adminRole}}
