creacion de ruta api/users/delete/:uid que elimina a un usuario desde la vista adminView.handlebars

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -41,6 +41,7 @@
 .user-card{
     margin: 1rem;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     border: solid rgba(0, 0, 0, 0.218);
 }
